[package]
name = "iptvnator"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3.0"
colored = "2.0.0"
directories = "4.0.1"
futures-util = "0.3.25"
indicatif = { version = "0.17.3", features = ["tokio"] }
reqwest = { version = "0.11.13", features = ["blocking", "deflate", "gzip", "rustls", "rustls-tls", "stream"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
tokio = { version = "1.24.2", features = ["full"] }
